# Nitronic

./: .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  Nitronic.sln  README.md  premake5.lua
NitronicCore/: NitronicCore.vcxproj  NitronicCore.vcxproj.filters  premake5.lua
NitronicCore/src/: Nitronic.h  npch.h
NitronicCore/src/Nitronic/Core/: Application.cpp  Application.h  Assert.h  Base.h  EntryPoint.h  Log.cpp  Log.h  PlatformDetection.h
NitronicCore/src/Nitronic/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
NitronicEditor/: NitronicEditor.vcxproj  premake5.lua
Sandbox/: Sandbox.vcxproj  premake5.lua
Sandbox/src/: SandboxApp.cpp
assets/shaders/: Compile.bat  basic.vert.glsl
bin-int/Debug-windows-x86_64/NitronicCore/NitronicCore.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
bin-int/Debug-windows-x86_64/Sandbox/: Sandbox.exe.recipe  vc143.idb
bin-int/Debug-windows-x86_64/Sandbox/Sandbox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Sandbox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
editor/: CMakeLists.txt
editor/src/: Editor.cpp
engine/: CMakeLists.txt
engine/include/: Nitronic.hpp
engine/include/core/: AssetImporter.h  Constants.h  Constants.hpp  Enums.h  Enums.hpp  Macros.h  Macros.hpp
engine/include/engine/: AssetImporter.h  AssetImporter.hpp  BasicComponents.h  BasicComponents.hpp  Engine.h  Engine.hpp  Event.h  Event.hpp  EventBus.h  EventBus.hpp  GlfwInclude.h  GlfwInclude.hpp  Input.h  Input.hpp  Layer.h  Layer.hpp  Log.h  Log.hpp  Scene.h  Transform.h  Transform.hpp  Window.h  Window.hpp
engine/include/renderer/: Camera.h  Camera.hpp  Constants.h  Device.h  Device.hpp  ImGuiRenderer.h  ImGuiRenderer.hpp  Material.h  Material.hpp  Mesh.h  Mesh.hpp  Model.h  OffscreenFramebuffer.h  OffscreenFramebuffer.hpp  PSOCache.h  PSOCache.hpp  Renderer.h  Renderer.hpp  RendererComponents.h  RendererComponents.hpp  RendererConstants.h  RendererConstants.hpp  RendererScene.h  RendererTypes.h  RendererTypes.hpp  RendererUtils.h  RendererUtils.hpp  ShaderCache.h  ShaderCache.hpp  Shaders.h  Shaders.hpp  Transform.h
engine/include/util/: IOUtils.h  IOUtils.hpp
engine/src/core/: Engine.cpp  Window.cpp
engine/src/engine/core/: AssetImporter.cpp  Engine.cpp  Input.cpp  Layer.cpp  Log.cpp  Renderer.cpp  Window.cpp  Window.h
engine/src/engine/renderer/: Camera.cpp  Device.cpp  ImGuiRenderer.cpp  Material.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Transform.cpp
engine/src/platform/dx11/: DeviceDX11.cpp  RendererDX11.cpp
engine/src/platform/dx11/renderer/: ImGuiRendererDX11.cpp  RendererDX11.cpp
engine/src/platform/dx12/: DeviceDX12.cpp  RendererDX12.cpp
engine/src/platform/dx12/renderer/: ImGuiRendererDX12.cpp  RendererDX12.cpp
engine/src/platform/vulkan/: DeviceVK.cpp  DeviceVK.h  RendererVK.cpp  RendererVK.h  VkMacros.h  VulkanInclude.h
engine/src/platform/vulkan/renderer/: DeviceVK.cpp  DeviceVK.h  ImGuiRendererVk.cpp  ImGuiRendererVk.h  RendererVK.cpp  RendererVK.h  VkHelpers.h  VkMacros.h
sandbox/: CMakeLists.txt
sandbox/src/: Sandbox.cpp
shaders/: Basic.slang  Empty.slang
